--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.10"
 django = "4.1.2"
 djangorestframework = "^3.14.0"
 psycopg2 = "^2.9.5"
+dj-rest-auth = {extras = ["with-social"], version = "^2.2.6"}
 
 
 [build-system]
