--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ djangorestframework = "^3.14.0"
 psycopg2 = "^2.9.5"
 dj-rest-auth = {extras = ["with-social"], version = "^2.2.6"}
 djangorestframework-simplejwt = "^5.2.2"
+drf-nested-routers = "^0.93.4"
 
 
 [build-system]
