--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ psycopg2 = "^2.9.5"
 dj-rest-auth = {extras = ["with-social"], version = "^2.2.6"}
 djangorestframework-simplejwt = "^5.2.2"
 drf-nested-routers = "^0.93.4"
+drf-yasg = {extras = ["validation"], version = "^1.21.4"}
 
 
 [build-system]
